# ucv-intro-grafica

proyecto-1/: Cargo.toml  QUESTIONS.md  README.md  build.ps1  prepare.sh
proyecto-1/src/: app_state.rs  canvas.rs  draw_state.rs  gui.rs  main.rs  state.rs
proyecto-1/src/core/: mod.rs  point.rs  rgba.rs
proyecto-1/src/primitives/: bezier.rs  circle.rs  core.rs  ellipse.rs  line.rs  mod.rs  rectangle.rs  triangle.rs
proyecto-2/: .gitignore  Makefile  Proyecto1.sln  Proyecto1.vcxproj  Proyecto1.vcxproj.filters  Proyecto2.vcxproj  Proyecto2.vcxproj.filters  README.md  imgui.ini
proyecto-2/src/: 3DViewer.cpp  3DViewer.h  C3DViewer.h  FileLoader.h  GLUtils.h  Main.cpp  State.h  Submesh.h  Vertex.h  camera.h  file_loader.h  main.cpp  object.h  shape.h  state.h  submesh.h
proyecto-2/src/state/: C3DViewer.h  State.h
proyecto-2/src/submesh/: Base.h  Submesh.h
proyecto-2/src/utils/: Camera.h  FPSCounter.h  FileLoader.h  Shaders.h  Utils.h
proyecto-3/: .gitignore  Makefile  Proyecto2.vcxproj  Proyecto2.vcxproj.filters  README.md
proyecto-3/assets/cool-table/: cool-table.mtl
tarea-1/: .gitignore  Makefile  benchmark.csv  imgui.ini  test
tarea-1/src/: EllipseRender.h  PixelRender.cpp  PixelRender.h  main.cpp  test.cpp
tarea-2/: .gitignore  Makefile  Makefile.test  plot_performance.py  tarea-1
tarea-2/src/: EllipseRender.h  Line.cpp  PixelRender.cpp  PixelRender.h  test.cpp
tarea-3/: .gitignore  Makefile  Makefile.test  test.cpp
tarea-3/scripts/: create_test_images.py  test.py
tarea-3/src/: image.h  main.cpp  median.h  stb_libs.cpp
(+29 files in other folders)
